--- a/package.json
+++ b/package.json
@@ -1,109 +1,88 @@
 {
-  "name": "yc-actions-yc-obj-storage-upload",
-  "version": "2.1.0",
-  "description": "GitHub Action to upload files to Yandex Cloud Object Storage.",
-  "exports": {
-    ".": "./dist/index.js"
-  },
-  "scripts": {
-    "bundle": "npm run format:write && npm run package",
-    "ci-test": "jest",
-    "coverage": "make-coverage-badge --output-path ./badges/coverage.svg",
-    "format:write": "prettier --write **/*.ts",
-    "format:check": "prettier --check **/*.ts",
-    "lint": "npx eslint . -c .eslintrc.yml",
-    "package": "ncc build src/index.ts --license licenses.txt",
-    "package:watch": "npm run package -- --watch",
-    "test": "GITHUB_WORKSPACE=__tests__ jest",
-    "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package",
-    "git-tag": "git tag v`cat package.json | jq -r '.version' | awk -F. '{print $1}'` -f &&  git tag v`cat package.json | jq -r '.version'` -f"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yc-actions/yc-sls-function.git"
-  },
-  "keywords": [
-    "actions",
-    "yandex cloud",
-    "S3",
-    "object storage",
-    "upload"
-  ],
-  "author": "Nikolay Matrosov",
-  "license": "MIT",
-  "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0",
-    "@aws-sdk/client-s3": "^3.614.0",
-    "@aws-sdk/lib-storage": "^3.614.0",
-    "@grpc/grpc-js": "^1.10.11",
-    "@smithy/protocol-http": "^4.0.3",
-    "@yandex-cloud/nodejs-sdk": "^2.7.7",
-    "glob": "^11.0.0",
-    "mime-types": "^2.1.35",
-    "minimatch": "10.0.1",
-    "minimist": ">=1.2.8",
-    "path-scurry": "^2.0.0"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "verbose": true,
-    "clearMocks": true,
-    "testEnvironment": "node",
-    "moduleFileExtensions": [
-      "js",
-      "ts"
-    ],
-    "testMatch": [
-      "**/*.test.ts"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/dist/"
-    ],
-    "transform": {
-      "^.+\\.ts$": "ts-jest"
-    },
-    "coverageReporters": [
-      "json-summary",
-      "text",
-      "lcov"
-    ],
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "./src/**",
-      "!./src/index.ts"
-    ]
-  },
-  "devDependencies": {
-    "@swc/cli": "^0.4.0",
-    "@swc/core": "^1.6.13",
-    "@swc/jest": "^0.2.36",
-    "@types/archiver": "^6.0.2",
-    "@types/jest": "^29.5.12",
-    "@types/mime-types": "^2.1.4",
-    "@types/mustache": "^4.2.5",
-    "@types/node": "20.14.10",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
-    "@vercel/ncc": "^0.38.1",
-    "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
-    "eslint-plugin-github": "^5.0.1",
-    "eslint-plugin-jsonc": "^2.16.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^28.6.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "jest": "^29.7.0",
-    "js-yaml": "^4.1.0",
-    "make-coverage-badge": "^1.2.0",
-    "prettier": "3.3.2",
-    "prettier-eslint": "^16.3.0",
-    "ts-jest": "^29.2.2",
-    "typescript": "^5.5.3"
-  },
-  "engines": {
-    "node": ">=20"
-  }
+	"name": "yc-kz-actions-yc-obj-storage-upload",
+	"version": "2.1.0",
+	"description": "GitHub Action to upload files to Yandex Cloud Object Storage.",
+	"exports": {
+		".": "./dist/index.js"
+	},
+	"scripts": {
+		"bundle": "npm run format:write && npm run package",
+		"ci-test": "jest",
+		"coverage": "make-coverage-badge --output-path ./badges/coverage.svg",
+		"format:write": "prettier --write **/*.ts",
+		"format:check": "prettier --check **/*.ts",
+		"lint": "npx eslint . -c .eslintrc.yml",
+		"package": "ncc build src/index.ts --license licenses.txt",
+		"package:watch": "npm run package -- --watch",
+		"test": "GITHUB_WORKSPACE=__tests__ jest",
+		"all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package",
+		"git-tag": "git tag v`cat package.json | jq -r '.version' | awk -F. '{print $1}'` -f &&  git tag v`cat package.json | jq -r '.version'` -f"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/yc-actions/yc-sls-function.git"
+	},
+	"keywords": ["actions", "yandex cloud", "S3", "object storage", "upload"],
+	"author": "Nikolay Matrosov",
+	"license": "MIT",
+	"dependencies": {
+		"@actions/core": "^1.10.1",
+		"@actions/github": "^6.0.0",
+		"@aws-sdk/client-s3": "^3.614.0",
+		"@aws-sdk/lib-storage": "^3.614.0",
+		"@grpc/grpc-js": "^1.10.11",
+		"@smithy/protocol-http": "^4.0.3",
+		"@yandex-cloud/nodejs-sdk": "^2.7.7",
+		"glob": "^11.0.0",
+		"mime-types": "^2.1.35",
+		"minimatch": "10.0.1",
+		"minimist": ">=1.2.8",
+		"path-scurry": "^2.0.0"
+	},
+	"jest": {
+		"preset": "ts-jest",
+		"verbose": true,
+		"clearMocks": true,
+		"testEnvironment": "node",
+		"moduleFileExtensions": ["js", "ts"],
+		"testMatch": ["**/*.test.ts"],
+		"testPathIgnorePatterns": ["/node_modules/", "/dist/"],
+		"transform": {
+			"^.+\\.ts$": "ts-jest"
+		},
+		"coverageReporters": ["json-summary", "text", "lcov"],
+		"collectCoverage": true,
+		"collectCoverageFrom": ["./src/**", "!./src/index.ts"]
+	},
+	"devDependencies": {
+		"@swc/cli": "^0.4.0",
+		"@swc/core": "^1.6.13",
+		"@swc/jest": "^0.2.36",
+		"@types/archiver": "^6.0.2",
+		"@types/jest": "^29.5.12",
+		"@types/mime-types": "^2.1.4",
+		"@types/mustache": "^4.2.5",
+		"@types/node": "20.14.10",
+		"@typescript-eslint/eslint-plugin": "^7.16.0",
+		"@typescript-eslint/parser": "^7.16.0",
+		"@vercel/ncc": "^0.38.1",
+		"dotenv": "^16.4.5",
+		"eslint": "^8.57.0",
+		"eslint-plugin-github": "^5.0.1",
+		"eslint-plugin-jsonc": "^2.16.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jest": "^28.6.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"jest": "^29.7.0",
+		"js-yaml": "^4.1.0",
+		"make-coverage-badge": "^1.2.0",
+		"prettier": "3.3.2",
+		"prettier-eslint": "^16.3.0",
+		"ts-jest": "^29.2.2",
+		"typescript": "^5.5.3"
+	},
+	"engines": {
+		"node": ">=20"
+	}
 }
